--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
 		<div id="brandname">
 			DVA project
 		</div>
-		<h2>Zipecode to Cluster Label</h2>
+		<h2>Zipcode to Hospital Group</h2>
 
 	</div>
 	</header>
@@ -26,7 +26,7 @@
 		<textarea name="message" rows="2" cols="6"></textarea>
 		<br/>
 
-		<input type="submit" class="btn-info" value="show label">
+		<input type="submit" class="btn-info" value="show group">
 
 	</form>
 
