--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <title> Upload your zipcode for the cluster label</title>
-  <h2>Upload your zipcode for the cluster label</h2>
+  <title>Submit your zipcode to get your hospital group</title>
+  <h2>Submit your zipcode to get your hospital group</h2>
 </head>
 
 <body>
