--- a/templates/result.html
+++ b/templates/result.html
@@ -11,7 +11,7 @@
 	<header>
 		<div class="container">
 			<div id="brandname">
-				Hospital cluster
+				Hospital Group
 			</div>
 			<h2>Your cluster label</h2>
 
